# facturacionCplusplus

./: CMakeLists.txt  compilar.sh  facturacion  prompt.txt  resumen_sistema_facturacion.txt
.github/workflows/: ci.yml
include/: arca_service.hpp  cliente.hpp  cuit_validator.hpp  database.hpp  email_service.hpp  factura.hpp  producto.hpp  reporte_pdf.hpp  terminal.hpp  tipos.hpp
src/: arca_service.cpp  cliente.cpp  cuit_validator.cpp  database.cpp  email_service.cpp  factura.cpp  main.cpp  reporte_pdf.cpp
